# micronucleus

./: .gitignore  .gitmodules  Changelog.txt  Contributing.txt  Devices_with_Micronucleus.md  Digispark_usage.md  README.md  Readme  Readme.md  Readme.txt  Style Guide.txt
commandline/: 49-micronucleus.rules  Blinky.hex  Makefile  Makefile.windows  README.md  Readme  bootloadHID  hidsdi.h  littleWire_v11.hex  main.c  micronucleus.c  usb-libusb.c  usb-windows.c  usbcalls.c  usbcalls.h
firmware/: Burn_upgrade-test.cmd  CalculateSize.py  MK_ALL.sh  MK_UPGRADES.sh  Makefile  README  README.md  README.upgrade  Roadmap.txt  SetPath.cmd  bootloader-avr25.x  bootloader-avr35.x  bootloader-enable-wdt.h  bootloader-jumper-mode.h  bootloader-led.h  bootloader-low-power-mode.h  bootloader-restore-osccal.h  bootloader-timer-mode.h  bootloader-vectors.S  bootloader.c  bootloader.h  bootloaderconfig.h  chipid.h  crt1.S  dump.rb  macros.inc  main.c  main.c.lst  (+27 more)
mnflash/: .gitignore  Makefile  Makefile.in  README  autogen.sh  configure  configure.ac  firmware-blob.c  firmware-blob.h  firmware.c  firmware.h  hexdump.c  hexdump.h  load-elf.c  load-elf.h  load-ihex.c  load-ihex.h  load-raw.c  load-raw.h  mnflash.c  mnflash.pc.in  mnflash.pod  uploader.c  uploader.h  usb-device.c  usb-device.h
mnflash/example/: Makefile  README  mnflash-switch.c
mnflash/include/libmnflash/: firmware.h  hexdump.h  load-elf.h  load-ihex.h  load-raw.h  log.h  uploader.h  usb-device.h
mnflash/lib/: firmware-blob.c  firmware.c  hexdump.c  load-elf.c  load-ihex.c  load-raw.c  log.c  uploader.c  usb-device.c
(+285 files in other folders)
